--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 
     <script type="text/javascript">
-        $(document).ready( function() {
-            clock.start();
+        $('document').ready( function() {
+            Clock.start();
         });
     </script>
 </head>
