dots for every five minutes.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <centerizer>
     <div class="clock">
-        <table>
+        <table class="grid">
             <tr><td>E</td><td>S</td><td>K</td><td>I</td><td>S</td><td>T</td><td>L</td><td>F</td><td>Ü</td><td>N</td><td>F</td></tr>
             <tr><td>Z</td><td>E</td><td>H</td><td>N</td><td>Z</td><td>W</td><td>A</td><td>N</td><td>Z</td><td>I</td><td>G</td></tr>
             <tr><td>D</td><td>R</td><td>E</td><td>I</td><td>V</td><td>I</td><td>E</td><td>R</td><td>T</td><td>E</td><td>L</td></tr>
@@ -28,6 +28,13 @@
             <tr><td>W</td><td>A</td><td>C</td><td>H</td><td>T</td><td>Z</td><td>E</td><td>H</td><td>N</td><td>R</td><td>S</td></tr>
             <tr><td>B</td><td>S</td><td>E</td><td>C</td><td>H</td><td>S</td><td>F</td><td>M</td><td>U</td><td>H</td><td>R</td></tr>
         </table>
+
+        <div class="dots">
+            <div class="one">●</div>
+            <div class="two">●</div>
+            <div class="three">●</div>
+            <div class="four">●</div>
+        </div>
     </div>
 </centerizer>
 </body>
