--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@
             <tr><td>B</td><td>S</td><td>E</td><td>C</td><td>H</td><td>S</td><td>F</td><td>M</td><td>U</td><td>H</td><td>R</td></tr>
         </table>
 
-        <div class="dots">
-            <div class="one">●</div>
-            <div class="two">●</div>
-            <div class="three">●</div>
-            <div class="four">●</div>
-        </div>
+        <div class="dots one">●</div>
+        <div class="dots two">●</div>
+        <div class="dots three">●</div>
+        <div class="dots four">●</div>
     </div>
 </centerizer>
 </body>
