--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="js/cordova-2.2.0.js"></script>
     <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="js/clock.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 
     <script type="text/javascript">
+        document.addEventListener("deviceready", onDeviceReady, false);
+
+        function onDeviceReady() {
+            window.setTimeout(navigator.splashscreen.hide, 100);
+        }
+
         $('document').ready( function() {
             Clock.start();
         });
